新增数据下载器
新增数据下载器

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
     "plotly>=6.0.0",
     "tqdm>=4.67.1",
     "loguru>=0.7.3",
-    "nbformat>=5.10.4"
+    "nbformat>=5.10.4",
+    "pytest>=8.4.1"
 ]
 keywords = ["quant", "quantitative", "investment", "trading", "algotrading"]
 
@@ -71,7 +72,7 @@ path = "vnpy/__init__.py"
 pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"
 
 [tool.hatch.build.targets.wheel]
-packages = ["vnpy"]
+packages = ["vnpy", "dataloader"]
 include-package-data = true
 
 [tool.hatch.build.targets.sdist]
